--- a/frontend/calendar-app/src/Components/NewEventForm/event.css
+++ b/frontend/calendar-app/src/Components/NewEventForm/event.css
@@ -1,6 +1,47 @@
-.event-box {
+.new-event-box {
     border: 3px solid #1c7430;
+    width: 200px;
+    height: 220px;
+    margin: 10px 5% 5%;
+    float: left;
+    font-size: 12px;
+    text-align: left;
+}
+
+form {
+    width: 100%;
+    margin-left: 10px;
+}
+
+input {
+    width: 100%;
+    height: 20px;
+    font-size: 12px;
+    text-align: left;
+    margin-left: 10px;
+
+}
+.time {
+    height: 20px;
+    width: 90px;
+}
+
+.info {
+    height: 200px;
+    text-align: left;
+    width: 100%;
+    resize: none;
+}
+
+h1 {
+    font-size: 15px;
+    text-align: center;
+}
+
+.button {
     width: 40%;
-    margin: 5%;
-    margin-top: 10px;
+    margin-left: 50px;
+    text-align: center;
+    margin-top: 5px;
+
 }
